# nokolat2024

./: .gitignore  404.html  CMakeLists.txt  README.md  index.html  mkdocs.yml  package.xml
.github/workflows/: ci.yml
1-1競技紹介/: index.html
2-1飛行機の特徴/: index.html
2-2飛行機の操作/: index.html
2-3機体設計による制御性の変化/: index.html
3-1仕様決め/: index.html
3-2処理の流れ/: index.html
3-3各ノードの機能/: index.html
3-4各launchファイルの機能/: index.html
4-1画像処理/: index.html
4-2制御/: index.html
docs/: 1-1競技紹介.md  2-1飛行機の特徴.md  2-2飛行機の操作.md  2-3機体設計による制御性の変化.md  3-1仕様決め.md  index.md
docs/partials/: comments.html
include/nokolat2024/: main_control.hpp
launch/: cam_exp.launch.xml  cam_proc_test.launch.xml  camera_calibration.xml  imu.launch.xml  imu_init.launch.xml  imu_launch.py  infra_cam.launch.xml  joy_test.launch.xml  path_test.launch.xml
param/: camera_param_left.yaml  camera_param_right.yaml  control_param.yaml  left.yaml  ost.txt  right.yaml
rviz/: model.rviz
search/: search_index.json
src/: camera_imu_calib.cpp  camera_info_publisher.cpp  cog_corrected.cpp  depth_estimation.cpp  get_neutral_position.cpp  image_diff_extraction.cpp  imu2pose.cpp  imu2tf.cpp  imu_tof2posAndQuat.cpp  infra2bivaluation.cpp  init_pose.cpp  main_control.cpp  path_followers.cpp  path_generator.cpp  path_pub.cpp  path_test.cpp  point2pointStamped.cpp  position_estimation.cpp  projection_xy.cpp  pub_area.cpp  pub_cameraInfo.cpp  pub_command.cpp  pub_drop_timing.cpp  pub_timing.cpp  pub_ui_command.cpp  pub_vel.cpp  pub_vel_link.cpp  recive_command.cpp  rotation_counter.cpp  send_command.cpp  smooth_altitude.cpp  stereo_maching.cpp  test_positin_pub.cpp  test_position_pub.cpp  tf2rpy.cpp  tf_publisher.cpp  timer.cpp  timestamp_sync.cpp
urdf/: model.stl  model3d.urdf
